Fixed: text alignment CSS on the live tiles Fixed: Some admin components showing for non HD admins

--- a/CHS Extranet/HAP.Web/style/basestyle.css
+++ b/CHS Extranet/HAP.Web/style/basestyle.css
@@ -113,7 +113,7 @@ h1.Announcement b { font-size: 16px; }
 #HomeButtons .appointment span label { float: right; line-height: normal; font-size: 11px; height: 24px; position: relative; margin-top: -14px; padding: 0; }
 #HomeButtons .appointment span label b { font-size: 24px; font-weight: normal; }
 
-#HomeButtons .me span label, #HomeButtons a span label.text { line-height: normal; font-size: 11px; padding: 0; }
+#HomeButtons .me span label, #HomeButtons a span label.text { line-height: normal; font-size: 11px; padding: 0; text-align: left; }
 #HomeButtons .me span, #HomeButtons .helpdesk span { text-align: left; }
 #HomeButtons .me .progress { display: block; background: #fff; height: 14px; overflow: hidden; white-space: nowrap; position: relative; }
 #HomeButtons .me .progress u { background: green; display: block; height: 12px; margin: 1px 1px 0 1px; }
